# gbasic

./: .gitignore  Cargo.toml  LICENSE  README.md  roadmap.md
compiler/cli/: Cargo.toml
compiler/cli/src/: main.rs
compiler/cli/tests/: e2e.rs  error_golden.rs
compiler/common/: Cargo.toml
compiler/common/src/: ast.rs  error.rs  lib.rs  shortcuts.rs  span.rs  types.rs
compiler/irgen/: Cargo.toml
compiler/irgen/examples/: poc_desktop.rs  poc_web.rs
compiler/irgen/src/: lib.rs  llvm_backend.rs
compiler/lexer/: Cargo.toml
compiler/lexer/src/: lib.rs  token.rs
compiler/lexer/tests/: snapshots.rs
compiler/lexer/tests/snapshots/: snapshots__control_flow.snap  snapshots__full_program.snap  snapshots__method_chain.snap  snapshots__operators.snap  snapshots__string_literal.snap
compiler/parser/: Cargo.toml
compiler/parser/src/: expr.rs  lib.rs  method_chain.rs  stmt.rs
compiler/parser/tests/: snapshots.rs
compiler/parser/tests/snapshots/: snapshots__for_loop.snap  snapshots__function_decl.snap  snapshots__let_with_type.snap  snapshots__match_stmt.snap  snapshots__method_chain.snap
compiler/typechecker/: Cargo.toml
compiler/typechecker/src/: lib.rs  symbol_table.rs
docs/: gap-analysis-and-timeline.md  grammar.md  guardrails.md
examples/: angrybirds.gb  arithmetic.gb  basics.gb  control_flow.gb  flappy.gb  hello.gb  math_viz.gb  namespaces.gb  particles.gb  pong.gb  sound_demo.gb  sprite_demo.gb
runtime/desktop/: Cargo.toml
runtime/desktop/src/: lib.rs
runtime/web/: Cargo.toml
runtime/web/src/: lib.rs
tests/: e2e.rs
